umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_indigo_indsp-197.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 25
bond_count: 26
sum_formula: C20BrNO3
graph6: "XHGGOC@?GO_@?`?G??G?@??G??G??G??O??@???G???_??@???P"
