umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_indigo_mol2.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 23
bond_count: 24
sum_formula: C17HNO4
graph6: VhEH?CA?O?_@?@?O_?O?O?@??_???G??G??@???G??@?
